--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
+    "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   }
 }
